--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,6 +2,7 @@
 
 one:
   name: MyString
+  telephone: MyString
   email: MyString
   address: MyString
   password: MyString
@@ -9,6 +10,7 @@ one:
 
 two:
   name: MyString
+  telephone: MyString
   email: MyString
   address: MyString
   password: MyString
